samples/_failures_safe/1761338503_7d0362_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9d18caf.c: In function ‘main’:
./samples/SAFE/__tmp_b9d18caf.c:158:17: error: expected ‘;’ at end of input
  158 |     print_matrix
      |                 ^
      |                 ;
./samples/SAFE/__tmp_b9d18caf.c:158:5: error: expected declaration or statement at end of input
  158 |     print_matrix
      |     ^~~~~~~~~~~~
